[project]
name = "linki"
version = '0.0.3'
description = 'Distributed wiki tools'
authors = [{ name = 'Antonio M', email = 'antoniomenteguiaga@gmail.com' }]
readme = "README.md"
dependencies = [
    "typer==0.7.0",
    "typing_extensions==4.5.0",
    "bottle==0.12.25",
    "msgspec==0.16.0",
    "Werkzeug==2.3.6",
    "pypandoc==1.11",
    "requests==2.31.0"
]

[project.scripts]
linki = "linki:main.run"
