[project]
name = "linki"
dynamic = ["version"]
description = 'Distributed wiki tools'
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer~=0.9.0",
    "typing_extensions~=4.5.0",
    "bottle~=0.12.25",
    "msgspec~=0.16.0",
    "Werkzeug~=2.3.6",
    "pypandoc~=1.11",
    "requests~=2.31.0"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[tool.setuptools.dynamic]
version = { attr = "linki.__version__" }

[project.optional-dependencies]
dev = ["pytest~=7.3.2", "hypothesis~=6.78.3"]

[project.scripts]
linki = "linki:main.app"

[project.urls]
"Homepage" = "https://github.com/roughdrafts-xyz/Linki"
"Bug Tracker" = "https://github.com/roughdrafts-xyz/Linki/issues"
