[tool.poetry]
name = "linki"
version = "0.0.15"
description = "Distributed wiki tools"
authors = []
license = "GPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
typing-extensions = "^4.7.0"
bottle = "^0.12.25"
msgspec = "^0.16.0"
werkzeug = "^2.3.6"
pypandoc = "^1.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
hypothesis = "^6.80.0"

[tool.poetry.scripts]
linki = "linki:main.app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
